--- a/Lab1/Lab1_Notebook.ipynb
+++ b/Lab1/Lab1_Notebook.ipynb
@@ -2,46 +2,70 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import uncertainties as unc  \n",
+    "import uncertainties.unumpy as unumpy  \n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[array([ 0.  ,  0.01,  0.02, ...,  9.98,  9.99, 10.  ]), array([0.6601, 0.6601, 0.6601, ..., 0.4966, 0.5012, 0.5027])], [array([ 0.  ,  0.01,  0.02, ...,  9.98,  9.99, 10.  ]), array([0.6708, 0.6708, 0.6708, ..., 0.5369, 0.5378, 0.5387])], [array([ 0.  ,  0.01,  0.02, ...,  9.98,  9.99, 10.  ]), array([0.6661, 0.6661, 0.6661, ..., 0.4896, 0.4913, 0.493 ])], [array([ 0.  ,  0.01,  0.02, ...,  9.98,  9.99, 10.  ]), array([0.6983, 0.6983, 0.6983, ..., 0.5561, 0.5567, 0.5571])], [array([ 0.  ,  0.01,  0.02, ...,  9.98,  9.99, 10.  ]), array([0.7102, 0.7102, 0.7102, ..., 0.5298, 0.5309, 0.5319])], [array([ 0.  ,  0.01,  0.02, ...,  9.98,  9.99, 10.  ]), array([0.7169, 0.7169, 0.7169, ..., 0.5932, 0.5929, 0.5926])], [array([ 0.  ,  0.01,  0.02, ...,  9.98,  9.99, 10.  ]), array([0.6924, 0.6924, 0.6924, ..., 0.5167, 0.5165, 0.5163])], [array([ 0.  ,  0.01,  0.02, ...,  9.98,  9.99, 10.  ]), array([0.7129, 0.7129, 0.7129, ..., 0.5419, 0.541 , 0.54  ])], [array([ 0.  ,  0.01,  0.02, ...,  9.98,  9.99, 10.  ]), array([0.7008, 0.7008, 0.7008, ..., 0.5446, 0.5447, 0.5448])], [array([ 0.  ,  0.01,  0.02, ...,  9.98,  9.99, 10.  ]), array([0.7143, 0.7143, 0.7143, ..., 0.5448, 0.5445, 0.5443])]]\n"
+      "[[array([0.0+/-0.01, 0.01+/-0.01, 0.02+/-0.01, ..., 9.98+/-0.01,\n",
+      "       9.99+/-0.01, 10.0+/-0.01], dtype=object), array([0.6601+/-0.0001, 0.6601+/-0.0001, 0.6601+/-0.0001, ...,\n",
+      "       0.4966+/-0.0001, 0.5012+/-0.0001, 0.5027+/-0.0001], dtype=object)], [array([0.0+/-0.01, 0.01+/-0.01, 0.02+/-0.01, ..., 9.98+/-0.01,\n",
+      "       9.99+/-0.01, 10.0+/-0.01], dtype=object), array([0.6708+/-0.0001, 0.6708+/-0.0001, 0.6708+/-0.0001, ...,\n",
+      "       0.5369+/-0.0001, 0.5378+/-0.0001, 0.5387+/-0.0001], dtype=object)], [array([0.0+/-0.01, 0.01+/-0.01, 0.02+/-0.01, ..., 9.98+/-0.01,\n",
+      "       9.99+/-0.01, 10.0+/-0.01], dtype=object), array([0.6661+/-0.0001, 0.6661+/-0.0001, 0.6661+/-0.0001, ...,\n",
+      "       0.4896+/-0.0001, 0.4913+/-0.0001, 0.493+/-0.0001], dtype=object)], [array([0.0+/-0.01, 0.01+/-0.01, 0.02+/-0.01, ..., 9.98+/-0.01,\n",
+      "       9.99+/-0.01, 10.0+/-0.01], dtype=object), array([0.6983+/-0.0001, 0.6983+/-0.0001, 0.6983+/-0.0001, ...,\n",
+      "       0.5561+/-0.0001, 0.5567+/-0.0001, 0.5571+/-0.0001], dtype=object)], [array([0.0+/-0.01, 0.01+/-0.01, 0.02+/-0.01, ..., 9.98+/-0.01,\n",
+      "       9.99+/-0.01, 10.0+/-0.01], dtype=object), array([0.7102+/-0.0001, 0.7102+/-0.0001, 0.7102+/-0.0001, ...,\n",
+      "       0.5298+/-0.0001, 0.5309+/-0.0001, 0.5319+/-0.0001], dtype=object)], [array([0.0+/-0.01, 0.01+/-0.01, 0.02+/-0.01, ..., 9.98+/-0.01,\n",
+      "       9.99+/-0.01, 10.0+/-0.01], dtype=object), array([0.7169+/-0.0001, 0.7169+/-0.0001, 0.7169+/-0.0001, ...,\n",
+      "       0.5932+/-0.0001, 0.5929+/-0.0001, 0.5926+/-0.0001], dtype=object)], [array([0.0+/-0.01, 0.01+/-0.01, 0.02+/-0.01, ..., 9.98+/-0.01,\n",
+      "       9.99+/-0.01, 10.0+/-0.01], dtype=object), array([0.6924+/-0.0001, 0.6924+/-0.0001, 0.6924+/-0.0001, ...,\n",
+      "       0.5167+/-0.0001, 0.5165+/-0.0001, 0.5163+/-0.0001], dtype=object)], [array([0.0+/-0.01, 0.01+/-0.01, 0.02+/-0.01, ..., 9.98+/-0.01,\n",
+      "       9.99+/-0.01, 10.0+/-0.01], dtype=object), array([0.7129+/-0.0001, 0.7129+/-0.0001, 0.7129+/-0.0001, ...,\n",
+      "       0.5419+/-0.0001, 0.541+/-0.0001, 0.54+/-0.0001], dtype=object)], [array([0.0+/-0.01, 0.01+/-0.01, 0.02+/-0.01, ..., 9.98+/-0.01,\n",
+      "       9.99+/-0.01, 10.0+/-0.01], dtype=object), array([0.7008+/-0.0001, 0.7008+/-0.0001, 0.7008+/-0.0001, ...,\n",
+      "       0.5446+/-0.0001, 0.5447+/-0.0001, 0.5448+/-0.0001], dtype=object)], [array([0.0+/-0.01, 0.01+/-0.01, 0.02+/-0.01, ..., 9.98+/-0.01,\n",
+      "       9.99+/-0.01, 10.0+/-0.01], dtype=object), array([0.7143+/-0.0001, 0.7143+/-0.0001, 0.7143+/-0.0001, ...,\n",
+      "       0.5448+/-0.0001, 0.5445+/-0.0001, 0.5443+/-0.0001], dtype=object)]]\n"
      ]
     }
    ],
    "source": [
     "data_ruchardts = []\n",
     "i=0\n",
+    "error = [0.01,0.0001]\n",
     "while i<10:\n",
     "    import_run = []\n",
     "    j=0\n",
     "    while j<2:\n",
     "        collumn = np.genfromtxt(\"Data/Ruchardts.csv\", delimiter=\",\", usecols=(2*i+j), skip_header=2)\n",
+    "        collumn = unumpy.uarray(collumn, std_devs = error[j])\n",
     "        import_run.append(collumn)\n",
     "        j+=1\n",
     "    i+=1\n",
     "    data_ruchardts.append(import_run)\n",
-    "\n",
+    "    \n",
     "print(data_ruchardts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -62,17 +86,82 @@
     "plt.figure(figsize=(20, 10))\n",
     "for run in data_ruchardts:\n",
     "    plt.subplot(2,5,i)\n",
-    "    plt.plot(run[0],run[1])\n",
+    "    plt.plot(unumpy.nominal_values(run[0]),unumpy.nominal_values(run[1]))\n",
     "    i+=1\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([104.23+/-0.01, 103.78+/-0.01, 103.62+/-0.01, 104.18+/-0.01,\n",
+      "       103.5+/-0.01, 103.38+/-0.01, 103.34+/-0.01, 103.34+/-0.01,\n",
+      "       102.78+/-0.01, 102.27+/-0.01, 102.38+/-0.01], dtype=object), array([104.23+/-0.01, 103.78+/-0.01, 103.62+/-0.01, 104.18+/-0.01,\n",
+      "       103.5+/-0.01, 103.38+/-0.01, 103.34+/-0.01, 103.34+/-0.01,\n",
+      "       102.78+/-0.01, 102.27+/-0.01, 102.38+/-0.01], dtype=object)]\n",
+      "[array([104.67+/-0.01, 105.6+/-0.01, 105.3+/-0.01, 104.19+/-0.01,\n",
+      "       105.34+/-0.01, 103.11+/-0.01, 103.09+/-0.01, 102.58+/-0.01,\n",
+      "       106.29+/-0.01, 106.06+/-0.01], dtype=object), array([104.67+/-0.01, 105.6+/-0.01, 105.3+/-0.01, 104.19+/-0.01,\n",
+      "       105.34+/-0.01, 103.11+/-0.01, 103.09+/-0.01, 102.58+/-0.01,\n",
+      "       106.29+/-0.01, 106.06+/-0.01], dtype=object)]\n",
+      "[array([104.26+/-0.01, 103.89+/-0.01, 103.88+/-0.01, 103.47+/-0.01,\n",
+      "       103.27+/-0.01, 102.79+/-0.01, 102.57+/-0.01, 102.37+/-0.01,\n",
+      "       102.23+/-0.01, 104.41+/-0.01], dtype=object), array([104.26+/-0.01, 103.89+/-0.01, 103.88+/-0.01, 103.47+/-0.01,\n",
+      "       103.27+/-0.01, 102.79+/-0.01, 102.57+/-0.01, 102.37+/-0.01,\n",
+      "       102.23+/-0.01, 104.41+/-0.01], dtype=object)]\n",
+      "[array([103.48+/-0.01, 104.43+/-0.01, 104.63+/-0.01, 103.9+/-0.01,\n",
+      "       103.79+/-0.01, 103.05+/-0.01, 102.62+/-0.01, 102.68+/-0.01,\n",
+      "       102.28+/-0.01, 104.11+/-0.01], dtype=object), array([103.48+/-0.01, 104.43+/-0.01, 104.63+/-0.01, 103.9+/-0.01,\n",
+      "       103.79+/-0.01, 103.05+/-0.01, 102.62+/-0.01, 102.68+/-0.01,\n",
+      "       102.28+/-0.01, 104.11+/-0.01], dtype=object)]\n",
+      "[array([nan+/-0.01, nan+/-0.01, nan+/-0.01, ..., nan+/-0.01, nan+/-0.01,\n",
+      "       nan+/-0.01], dtype=object), array([nan+/-0.01, nan+/-0.01, nan+/-0.01, ..., nan+/-0.01, nan+/-0.01,\n",
+      "       nan+/-0.01], dtype=object)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_Air = []\n",
+    "data_Ar = []\n",
+    "data_CO2 = []\n",
+    "data_N2 = []\n",
+    "data_Leak_Check = []\n",
+    "\n",
+    "error = 0.01\n",
+    "\n",
+    "CD_list = ['Air', 'Ar', 'CO2', 'N2', 'Leak_Check']\n",
+    "\n",
+    "for gas in CD_list:\n",
+    "    collumn = np.genfromtxt(\"Data/CD_\"+gas+'.csv', delimiter=\",\", usecols=(0), skip_header=2)\n",
+    "    collumn = unumpy.uarray(collumn, std_devs = error)\n",
+    "    globals()['data_'+gas].append(collumn)\n",
+    "    collumn = np.genfromtxt(\"Data/CD_\"+gas+'.csv', delimiter=\",\", usecols=(0), skip_header=2)\n",
+    "    collumn = unumpy.uarray(collumn, std_devs = error)\n",
+    "    globals()['data_'+gas].append(collumn)\n",
+    "    print(globals()['data_'+gas])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def CD_gamme(H,P0,P1):\n",
+    "    return unumpy.log(P0/H) / unumpy.log(P0/P1)\n",
+    "\n",
+    "def Ruchardts_gamma(m,V,A,P,τ):\n",
+    "    return (4*np.pi^2*m*V) / (A^2 * P * τ)\n",
+    "\n",
+    "def test(a,b):\n",
+    "    return a*b"
+   ]
   }
  ],
  "metadata": {
