--- a/Lab3/Lab3_Notebook.ipynb
+++ b/Lab3/Lab3_Notebook.ipynb
@@ -10,8 +10,7 @@
     "import uncertainties.unumpy as unumpy  \n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import scipy.optimize as optimize\n",
-    "\n"
+    "import scipy.optimize as optimize"
    ]
   },
   {
@@ -684,7 +683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.10"
   },
   "orig_nbformat": 4
  },
