--- a/Lab6/Lab6_Notebook.ipynb
+++ b/Lab6/Lab6_Notebook.ipynb
@@ -104,41 +104,68 @@
     }
    ],
    "source": [
+    "#Here I define the function we will do the fits with\n",
+    "#The A is going to be fixed to the norm of the histogram since the area under each of these functions is 1 by default\n",
     "def Gaussian(x, mean, std,A):\n",
     "    return A*(1/(std*(2*np.pi)**0.5))*np.exp(-(x-mean)**2/(2* std**2))\n",
     "def Poisson(x,mu,A):\n",
     "    return A*(mu**x/scipy.special.factorial(x)) * np.exp(-mu)\n",
+    "#Here I create variation of the functions that support the uncertainties module. This will be used later\n",
     "def uGaussian(x, mean, std, A):\n",
     "    return A*(1/(std*(2*np.pi)**0.5))*unumpy.exp(-(x-mean)**2/(2* std**2))\n",
     "def uPoisson(x,mu, A):\n",
     "    return A*(mu**x/scipy.special.factorial(x)) * unumpy.exp(-mu)\n",
     "\n",
+    "#Simply importing all the run\n",
     "E1 = []\n",
     "E1.append(np.genfromtxt(\"E1.csv\", delimiter=\",\", usecols=(1), skip_header=1))\n",
     "E1.append(np.genfromtxt(\"E1.csv\", delimiter=\",\", usecols=(3), skip_header=1))\n",
     "E1.append(np.genfromtxt(\"E1.csv\", delimiter=\",\", usecols=(5), skip_header=1))\n",
+    "#Doing the horizontal sum of all the runs\n",
     "E1_sum=E1[0]+E1[1]+E1[2]\n",
     "E1.append(E1_sum)\n",
+    "\n",
+    "#Initialize a variable that keeps track the run indice at which we are going to be\n",
     "j=0\n",
     "list_run_num=['R1','R2','R3','Sum']\n",
+    "\n",
+    "#Does the entire process for each run + the horizontal sum\n",
     "for x in E1:\n",
+    "\n",
+    "    #Gets the title of the current run and increase the run indice by 1\n",
     "    run_num=list_run_num[j]\n",
     "    j=j+1\n",
+    "\n",
     "    plt.figure(figsize=(4, 8))\n",
     "    plt.subplot(2,1,1)\n",
+    "    \n",
+    "    #Create an histogram with bins of size 1 covering all our data. Note that the density is set to false, this is why A is necessary in the function above\n",
     "    n,bins,patches = plt.hist(x, density=False, edgecolor='black', bins = np.arange(min(x),max(x),1))\n",
+    "\n",
+    "    #Changes the x variable that is now useless to an array of the center points of each bins\n",
     "    x = np.linspace(min(bins)+0.5,max(bins)-0.5,len(n))\n",
+    "\n",
+    "    #The errorbar on each bin is (according to google) the squareroot of the count\n",
     "    nerr=n**0.5\n",
-    "    norm = sum(n)\n",
     "    plt.errorbar(x,n,yerr=nerr,fmt='ob')\n",
+    "\n",
+    "    #The norm (The area of the histogram) is calculated by doing the sum of all the counts\n",
+    "    norm = sum(n)\n",
+    "\n",
+    "    #Does the Gaussian fit. Note that the bounds limit the A parameter to the norm\n",
+    "    #p0 is really important here since the function is really sensible and having the wrong initial guess will screw up the fit.\n",
+    "    #Also note that in some cases the sigma wasn't working properly so I removed it. I don't know why but it's not that impactful anyway\n",
     "    popt,pcov = optimize.curve_fit(Gaussian,xdata=x, ydata=n,p0=[6,5,norm],bounds=((-np.inf,-np.inf,norm-0.0001), (np.inf,np.inf,norm)))\n",
     "    perr = np.sqrt(np.diag(pcov))\n",
     "    print(\"Gaussian Fit\")\n",
     "    print('Mean: '+str(popt[0])+' +/- '+str(perr[0]))\n",
     "    print('Std: '+str(popt[1])+' +/- '+str(perr[1]))\n",
     "    print('-'*50)\n",
+    "    #Stores the parameters and their error in variable that will be used later\n",
     "    gpopt=popt\n",
     "    gperr=perr\n",
+    "\n",
+    "    #Does the Poisson fit. Same info as the Gaussian fit above\n",
     "    popt,pcov = optimize.curve_fit(Poisson,xdata=x, ydata=n, p0=[6,norm],bounds=((-np.inf,norm-0.0001), (np.inf,norm)))\n",
     "    perr = np.sqrt(np.diag(pcov))\n",
     "    print(\"Poisson Fit\")\n",
@@ -146,11 +173,18 @@
     "    print('='*50)\n",
     "    ppopt=popt\n",
     "    pperr=perr\n",
+    "\n",
+    "    #Creates a new variable named xs(x smooth) which will be only used to clearly draw the fits \n",
     "    xs = np.linspace(min(bins),max(bins),2000)\n",
     "    plt.plot(xs,Gaussian(xs,gpopt[0],gpopt[1],gpopt[2]),color='g',label='Gaussian Distribution')\n",
     "    plt.plot(xs,Poisson(xs,ppopt[0],ppopt[1]),color='r',label='Poisson Distribution')\n",
+    "\n",
+    "    #Here I calculate the point (with it's error, so I use the uGaussian) \n",
+    "    #   for the center point of each bin this is used to calculate the residuals of each bins \n",
     "    gaussian_point=uGaussian(x,unc.ufloat(gpopt[0],gperr[0]),unc.ufloat(gpopt[1],gperr[1]),unc.ufloat(gpopt[2],gperr[2]))\n",
     "    poisson_point=uPoisson(x,unc.ufloat(ppopt[0],pperr[0]),unc.ufloat(ppopt[1],pperr[1]))\n",
+    "\n",
+    "    #Cleaning the graph\n",
     "    plt.legend(loc='upper right')\n",
     "    xmin, xmax = plt.xlim()\n",
     "    ymin, ymax = plt.ylim()\n",
@@ -158,14 +192,22 @@
     "    plt.ylim(ymin * 1.2, ymax * 1.2)\n",
     "    plt.ylabel('Occurence')\n",
     "    plt.title('E1/'+run_num)\n",
+    "\n",
+    "    #RESIDUALS\n",
     "    plt.subplot(2,1,2)\n",
+    "\n",
+    "    #Creates an array of ufloat for n (compiles the value of each bin with it's error)\n",
     "    u_n=[]\n",
     "    for i in np.linspace(0,len(n)-1,len(n)):\n",
     "        i=int(i)\n",
     "        u_n.append(unc.ufloat(n[i],nerr[i]))\n",
+    "\n",
+    "    #Plot the error bar and an horizontal line at y=0\n",
     "    plt.errorbar(x, unumpy.nominal_values(u_n-gaussian_point),yerr=unumpy.std_devs(u_n-gaussian_point) ,fmt='go', alpha=0.5 ,label = \"Gaussian Residuals\")\n",
     "    plt.errorbar(x, unumpy.nominal_values(u_n-poisson_point),yerr=unumpy.std_devs(u_n-poisson_point) ,fmt='ro', alpha=0.5 ,label = \"Poisson Residuals\")\n",
     "    plt.plot(xs,[0]*xs,'b')\n",
+    "\n",
+    "    #Cleaning the graph\n",
     "    xmin, xmax = plt.xlim()\n",
     "    ymin, ymax = plt.ylim()\n",
     "    plt.xlim(xmin, xmax)\n",
